--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
                 Hello from monster's fortunate island!
             </h1>
             <p class="subtitle">
-                (of an experience or situation) unpleasant; awful.
+                If you know how to catch the monster, please send pull request!
             </p>
         </div>
     </section>
     <section class="section">
         <div class="container">
-            <div class="content">
-                <p>If you know how to catch the monster, please send pull request!</p>
-            </div>
             <div class="columns">
                 <div class="column is-full">
                     <img width="100%" height="100%" src="monster.jpg">
