--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Let's ask shitty.monster</title>
+    <title>Monster's fortunate island</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="shortcut icon" href="monster.jpg">
 </head>
@@ -13,10 +13,10 @@
     <section class="section">
         <div class="container">
             <h1 class="title">
-                Hello from monster's fortunate island!
+                Hello from my fortunate island!
             </h1>
             <p class="subtitle">
-                If you know how to catch the monster, please send pull request!
+                If you know how to catch me, please send pull request!
             </p>
         </div>
     </section>
